# e-bills

./: .env  Cargo.toml  LICENSE.md  README.md  build.rs  qodana.yaml
.github/workflows/: qodana_code_quality.yml  rust.yml
bootstrap/: bootstrap_nodes.json
css/: body.css  footer.css  header.css
docs/diagrams/: e-bill_flow-diagram.md  e-bill_initial_setup.md  e-bill_initial_setup_alternative.md  e-bill_sequence_diagram.md
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.js  index.scss
frontend/src/assests/: New Tab.html
frontend/src/components/: Key.jsx  SingleContact.jsx
frontend/src/components/elements/: Amount.jsx  Arrow.jsx  BillDetails.jsx  CheckBox.jsx  IconHolder.jsx  Payments.jsx  SecondaryIcon.jsx  SelectSearchOption.jsx  SubHeading.jsx  SubTotal.jsx  TopDownHeading.jsx
frontend/src/components/pages/: AcceptPage.jsx  ActivityPage.jsx  Bill.jsx  BuyPage.jsx  Contact.jsx  CreateIdenity.jsx  EndorsePage.jsx  ErrrorPage.jsx  HomePage.jsx  IdentityPage.jsx  IssuePage.jsx  RepayPage.jsx  ReqAcceptPage.jsx  ReqPaymentPage.jsx  SellPage.jsx  SettingPage.jsx
frontend/src/components/popups/: AddContact.jsx  EditContact.jsx  PopedUp.jsx  SingleBillDetail.jsx
frontend/src/components/sections/: Header.jsx  HomeHeader.jsx  IssueForm.jsx  UniqueNumber.jsx
frontend/src/context/: MainContext.jsx
src/: api.rs  blockchain.rs  constants.rs  dht.rs  distributed_module.rs  filesharing.rs  main.rs  numbers_to_words.rs  raft.rs  test.rs  web.rs  zip.rs
templates/hbs/: bill.html.hbs  bill_chain.html.hbs  bill_history.html.hbs  bills_list.html.hbs  block.html.hbs  contacts.html.hbs  create_identity.html.hbs  footer.html.hbs  home.html.hbs  identity.html.hbs  info.html.hbs  nav.html.hbs  new_bill.html.hbs  new_contact.html.hbs  new_two_party_bill_drawer_is_drawee.html.hbs  new_two_party_bill_drawer_is_payee.html.hbs  search_bill.html.hbs
