[package]
name = "bitcredit"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
openssl = "0.10.40"
borsh = "0.10.2"
env_logger = "0.10.0"
chrono = "0.4.23"
async-trait = "0.1.64"
libp2p = { version = "0.51.3", features = ["tcp", "dns", "async-std", "noise", "yamux", "tokio", "macros", "kad", "request-response", "identify", "gossipsub", "relay", "dcutr"] }
tokio = { version = "1.26.0", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
open = "4.0.0"
serde_json = "1.0.94"
serde = "1.0.154"
serde_derive = "1.0.154"
hex = "0.4.3"
log = "0.4.17"
futures = "0.3.28"
futures-timer = "3.0.0"
async-std = "1.12.0"
void = "1.0.2"
bitcoin = { version = "0.30.0", features = ["rand", "rand-std"] }
reqwest = { version = "0.11.17", features = ["json", "serde_json"] }